--- a/style.css
+++ b/style.css
@@ -198,3 +198,62 @@ section#contact {
     right: 1rem;
   }
 }
+
+/* slide in for each nav ilement */
+.slide-in-1{
+  animation: slide-in 0.4s linear 0.2s both;
+}
+
+.slide-in-2{
+  animation: slide-in 0.4s linear 0.4s both;
+}
+
+.slide-in-3{
+  animation: slide-in 0.4s linear 0.6s both;
+}
+
+.slide-in-4{
+  animation: slide-in 0.4s linear 0.8s both;
+}
+
+.slide-in-5{
+  animation: slide-in 0.4s linear 1s both;
+}
+@keyframes slide-in{
+  from{
+    transform: translateX(-100%)
+  }
+  to{
+    transform: translateX(0)
+  }
+  }
+
+
+  /* slide out for each nav element */
+  .slide-out-{
+    animation: slide-out 0.3s linear 0.5s both;
+  }
+  
+  .slide-out-3{
+    animation: slide-out 0.3s linear 0.4s both;
+  }
+  
+  .slide-out-3{
+    animation: slide-out 0.3s linear 0.3s both;
+  }
+  
+  .slide-out-4{
+    animation: slide-out 0.3s linear 0.2s both;
+  }
+  
+  .slide-out-5{
+    animation: slide-out 0.3s linear 0.1s both;
+  }
+  @keyframes slide-out{
+    from{
+      transform: translateX(0)
+    }
+    to{
+      transform: translateX(-100%)
+    }
+    }
